--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,9 +1,10 @@
 ## Append samples you want in your CSV to this file as resources ##
 resources:
-- _v1beta1_logadapter.yaml
-- _v1beta1_opnicluster.yaml
-- _v1beta1_pretrainedmodel.yaml
-- _v1beta1_gpupolicyadapter-vgpu.yaml
+  - _v1beta2_monitoringcluster.yaml
+# - _v1beta1_logadapter.yaml
+# - _v1beta1_opnicluster.yaml
+# - _v1beta1_pretrainedmodel.yaml
+# - _v1beta1_gpupolicyadapter-vgpu.yaml
 # - _v1beta1_gpupolicyadapter.yaml
-- _v1_nodefeaturediscovery.yaml
+# - _v1_nodefeaturediscovery.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
