add cortex controller logic

--- a/config/crd/bases/opni.io_monitoringclusters.yaml
+++ b/config/crd/bases/opni.io_monitoringclusters.yaml
@@ -28,6 +28,152 @@ spec:
           spec:
             properties:
               cortex:
+                properties:
+                  logLevel:
+                    type: string
+                  storage:
+                    properties:
+                      azure:
+                        properties:
+                          accountKey:
+                            type: string
+                          accountName:
+                            type: string
+                          containerName:
+                            type: string
+                          endpointSuffix:
+                            type: string
+                          http:
+                            properties:
+                              expectContinueTimeout:
+                                format: int64
+                                type: integer
+                              idleConnTimeout:
+                                format: int64
+                                type: integer
+                              insecureSkipVerify:
+                                type: boolean
+                              maxConnectionsPerHost:
+                                type: integer
+                              maxIdleConnections:
+                                type: integer
+                              maxIdleConnectionsPerHost:
+                                type: integer
+                              responseHeaderTimeout:
+                                format: int64
+                                type: integer
+                              tlsHandshakeTimeout:
+                                format: int64
+                                type: integer
+                            type: object
+                          maxRetries:
+                            type: integer
+                        type: object
+                      backend:
+                        type: string
+                      filesystem:
+                        properties:
+                          directory:
+                            type: string
+                        type: object
+                      gcs:
+                        properties:
+                          bucketName:
+                            type: string
+                          serviceAccount:
+                            type: string
+                        type: object
+                      s3:
+                        properties:
+                          accessKeyID:
+                            type: string
+                          bucketName:
+                            type: string
+                          endpoint:
+                            type: string
+                          http:
+                            properties:
+                              expectContinueTimeout:
+                                format: int64
+                                type: integer
+                              idleConnTimeout:
+                                format: int64
+                                type: integer
+                              insecureSkipVerify:
+                                type: boolean
+                              maxConnectionsPerHost:
+                                type: integer
+                              maxIdleConnections:
+                                type: integer
+                              maxIdleConnectionsPerHost:
+                                type: integer
+                              responseHeaderTimeout:
+                                format: int64
+                                type: integer
+                              tlsHandshakeTimeout:
+                                format: int64
+                                type: integer
+                            type: object
+                          insecure:
+                            type: boolean
+                          region:
+                            type: string
+                          secretAccessKey:
+                            type: string
+                          signatureVersion:
+                            type: string
+                          sse:
+                            properties:
+                              kmsEncryptionContext:
+                                type: string
+                              kmsKeyID:
+                                type: string
+                              typ:
+                                type: string
+                            type: object
+                        type: object
+                      swift:
+                        properties:
+                          authUrl:
+                            type: string
+                          authVersion:
+                            type: integer
+                          connectTimeout:
+                            format: int64
+                            type: integer
+                          containerName:
+                            type: string
+                          domainID:
+                            type: string
+                          domainName:
+                            type: string
+                          maxRetries:
+                            type: integer
+                          password:
+                            type: string
+                          projectDomainID:
+                            type: string
+                          projectDomainName:
+                            type: string
+                          projectID:
+                            type: string
+                          projectName:
+                            type: string
+                          regionName:
+                            type: string
+                          requestTimeout:
+                            format: int64
+                            type: integer
+                          userDomainID:
+                            type: string
+                          userDomainName:
+                            type: string
+                          userID:
+                            type: string
+                          username:
+                            type: string
+                        type: object
+                    type: object
                 type: object
               gateway:
                 properties:
