--- a/config/samples/_v1beta2_monitoringcluster.yaml
+++ b/config/samples/_v1beta2_monitoringcluster.yaml
@@ -3,6 +3,12 @@ kind: MonitoringCluster
 metadata:
   name: opni-monitoring
 spec:
+  cortex:
+    storage:
+      backend: filesystem
+      filesystem:
+        directory: /data/tmp
+    logLevel: debug
   gateway:
     hostname: tilt-opni-gateway.os.lan
     auth:
