--- a/deploy/charts/opni/templates/rbac.yaml
+++ b/deploy/charts/opni/templates/rbac.yaml
@@ -2,8 +2,9 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  creationTimestamp: null
-  name: manager-role
+  name: opni-manager-role
+  labels:
+    {{- include "opni.labels" . | nindent 4 }}
 rules:
 - apiGroups:
   - ""
@@ -28,22 +29,6 @@ rules:
   - events
   - persistentvolumeclaims
   - secrets
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - ""
-  resources:
-  - configmaps
-  - persistentvolumeclaims
-  - secrets
-  - serviceaccounts
-  - services
   verbs:
   - create
   - delete
@@ -90,30 +75,12 @@ rules:
 - apiGroups:
   - ""
   resources:
-  - events
-  verbs:
-  - create
-  - get
-  - list
-  - patch
-  - watch
-- apiGroups:
-  - ""
-  resources:
   - nodes
   verbs:
   - get
   - list
   - patch
   - update
-  - watch
-- apiGroups:
-  - ""
-  resources:
-  - pods
-  verbs:
-  - get
-  - list
   - watch
 - apiGroups:
   - apps
@@ -157,19 +124,6 @@ rules:
 - apiGroups:
   - apps
   resources:
-  - deployments
-  - deployments/finalizers
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - apps
-  resources:
   - statefulsets
   verbs:
   - create
@@ -194,42 +148,6 @@ rules:
   - jobs
   verbs:
   - create
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - cert-manager.io
-  resources:
-  - certificates
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - cert-manager.io
-  resources:
-  - clusterissuers
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - cert-manager.io
-  resources:
-  - issuers
-  verbs:
-  - create
-  - delete
   - get
   - list
   - patch
@@ -412,67 +330,6 @@ rules:
   - list
   - watch
 - apiGroups:
-  - grafana.opni.io
-  resources:
-  - grafanadashboards
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - grafana.opni.io
-  resources:
-  - grafanadashboards/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - grafana.opni.io
-  resources:
-  - grafanadatasources
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - grafana.opni.io
-  resources:
-  - grafanadatasources/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - grafana.opni.io
-  resources:
-  - grafanas
-  - grafanas/finalizers
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - grafana.opni.io
-  resources:
-  - grafanas/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
   - logging.opni.io
   resources:
   - '*'
@@ -520,18 +377,6 @@ rules:
   - monitoring.coreos.com
   resources:
   - servicemonitors
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - networking.k8s.io
-  resources:
-  - ingresses
   verbs:
   - create
   - delete
@@ -602,108 +447,6 @@ rules:
   - update
   - watch
 - apiGroups:
-  - opensearch.opster.io
-  resources:
-  - opensearchclusters
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - opensearch.opster.io
-  resources:
-  - opensearchclusters/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - opensearch.opster.io
-  resources:
-  - opensearchclusters/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - opni.io
-  resources:
-  - bootstraptokens
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - opni.io
-  resources:
-  - clusters
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - opni.io
-  resources:
-  - datapreppers
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - opni.io
-  resources:
-  - datapreppers/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - opni.io
-  resources:
-  - datapreppers/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - opni.io
-  resources:
-  - gateways
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - opni.io
-  resources:
-  - gateways/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - opni.io
-  resources:
-  - gateways/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
   - opni.io
   resources:
   - gpupolicyadapters
@@ -732,18 +475,6 @@ rules:
 - apiGroups:
   - opni.io
   resources:
-  - keyrings
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - opni.io
-  resources:
   - logadapters
   - opniclusters
   verbs:
@@ -766,136 +497,6 @@ rules:
   resources:
   - logadapters
   - opniclusters/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - opni.io
-  resources:
-  - loggingclusterbindings
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - opni.io
-  resources:
-  - loggingclusterbindings/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - opni.io
-  resources:
-  - loggingclusterbindings/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - opni.io
-  resources:
-  - loggingclusters
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - opni.io
-  resources:
-  - loggingclusters/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - opni.io
-  resources:
-  - loggingclusters/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - opni.io
-  resources:
-  - monitoringclusters
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - opni.io
-  resources:
-  - monitoringclusters/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - opni.io
-  resources:
-  - monitoringclusters/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - opni.io
-  resources:
-  - multiclusterrolebindings
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - opni.io
-  resources:
-  - multiclusterrolebindings/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - opni.io
-  resources:
-  - multiclusterrolebindings/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - opni.io
-  resources:
-  - multiclusterusers
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - opni.io
-  resources:
-  - multiclusterusers/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - opni.io
-  resources:
-  - multiclusterusers/status
   verbs:
   - get
   - patch
@@ -952,30 +553,6 @@ rules:
   - get
   - patch
   - update
-- apiGroups:
-  - opni.io
-  resources:
-  - rolebindings
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - opni.io
-  resources:
-  - roles
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
 - apiGroups:
   - policy
   resources:
@@ -1114,3 +691,281 @@ rules:
   - storageclasses
   verbs:
   - watch
+- apiGroups:
+  - opensearch.opster.io
+  resources:
+  - opensearchclusters
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - opensearch.opster.io
+  resources:
+  - opensearchclusters/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - opensearch.opster.io
+  resources:
+  - opensearchclusters/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - opni.io
+  resources:
+  - datapreppers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - opni.io
+  resources:
+  - datapreppers/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - opni.io
+  resources:
+  - datapreppers/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - opni.io
+  resources:
+  - loggingclusters
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - opni.io
+  resources:
+  - loggingclusters/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - opni.io
+  resources:
+  - loggingclusters/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - opni.io
+  resources:
+  - loggingclusterbindings
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - opni.io
+  resources:
+  - loggingclusterbindings/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - opni.io
+  resources:
+  - loggingclusterbindings/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - opni.io
+  resources:
+  - multiclusterrolebindings
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - opni.io
+  resources:
+  - multiclusterrolebindings/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - opni.io
+  resources:
+  - multiclusterrolebindings/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - opni.io
+  resources:
+  - multiclusterusers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - opni.io
+  resources:
+  - multiclusterusers/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - opni.io
+  resources:
+  - multiclusterusers/status
+  verbs:
+  - get
+  - patch
+  - update
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: opni-metrics-reader
+  labels:
+    {{- include "opni.labels" . | nindent 4 }}
+rules:
+- nonResourceURLs:
+  - /metrics
+  verbs:
+  - get
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: opni-proxy-role
+  labels:
+    {{- include "opni.labels" . | nindent 4 }}
+rules:
+- apiGroups:
+  - authentication.k8s.io
+  resources:
+  - tokenreviews
+  verbs:
+  - create
+- apiGroups:
+  - authorization.k8s.io
+  resources:
+  - subjectaccessreviews
+  verbs:
+  - create
+---
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: opni-svc-insights
+  labels:
+    {{- include "opni.labels" . | nindent 4 }}
+rules:
+- apiGroups:
+  - ""
+  resources:
+  - namespaces
+  - endpoints
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - "apps"
+  resources:
+  - deployments
+  - replicasets
+  - daemonsets
+  - statefulsets
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - "batch"
+  resources:
+  - jobs
+  - cronjobs
+  verbs:
+  - get
+  - list
+  - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: opni-leader-election-rolebinding
+  labels:
+    {{- include "opni.labels" . | nindent 4 }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: opni-leader-election-role
+subjects:
+- kind: ServiceAccount
+  name: opni-manager
+  namespace: {{ .Release.Namespace }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: opni-manager-rolebinding
+  labels:
+    {{- include "opni.labels" . | nindent 4 }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: opni-manager-role
+subjects:
+- kind: ServiceAccount
+  name: opni-manager
+  namespace: {{ .Release.Namespace }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: opni-proxy-rolebinding
+  labels:
+    {{- include "opni.labels" . | nindent 4 }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: opni-proxy-role
+subjects:
+- kind: ServiceAccount
+  name: opni-manager
+  namespace: {{ .Release.Namespace }}
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: opni-manager
+  labels:
+    {{- include "opni.labels" . | nindent 4 }}
