--- a/deploy/charts/opni/values.yaml
+++ b/deploy/charts/opni/values.yaml
@@ -10,35 +10,30 @@ nameOverride: ""
 fullnameOverride: ""
 
 podAnnotations: {}
-
-podSecurityContext:
-  {}
-  # fsGroup: 2000
-
-securityContext:
-  {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-resources:
-  {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
+podSecurityContext: {}
+securityContext: {}
+resources: {}
 nodeSelector: {}
-
 tolerations: []
-
 affinity: {}
+
+gateway:
+  enabled: false
+  # Service type for the external gateway APIs
+  serviceType: LoadBalancer
+  # Gateway hostname (required if gateway.enabled is true)
+  hostname: ""
+  # Auth provider config (required if gateway.enabled is true)
+  auth: 
+    # Noauth provider:
+    # provider: noauth
+
+    # Openid provider:
+    # provider: openid
+    # openid: 
+    #   {} # see docs
+
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
+  extraVolumeMounts: []
