Updates for merge changes

--- a/config/crd/bases/opni.io_opniclusters.yaml
+++ b/config/crd/bases/opni.io_opniclusters.yaml
@@ -4053,6 +4053,9 @@ spec:
                         additionalProperties:
                           type: string
                         type: object
+                      replicas:
+                        format: int32
+                        type: integer
                       tolerations:
                         items:
                           properties:
@@ -4287,6 +4290,9 @@ spec:
                         additionalProperties:
                           type: string
                         type: object
+                      replicas:
+                        format: int32
+                        type: integer
                       tolerations:
                         items:
                           properties:
