--- a/.drone.yml
+++ b/.drone.yml
@@ -35,6 +35,13 @@ steps:
         from_secret: codecov_token
       files:
         - cover.out
+    when:
+      event:
+        - push
+      instance:
+        - drone-publish.rancher.io
+      branch:
+        - main
   - name: publish-dockerhub-tag
     image: docker
     environment:
