--- a/deploy/manifests/10_operator.yaml
+++ b/deploy/manifests/10_operator.yaml
@@ -81,7 +81,7 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-          image: rancher/opni-manager
+          image: rancher/opni
           livenessProbe:
             httpGet:
               path: /healthz
