--- a/deploy/charts/opni-monitoring-agent/values.yaml
+++ b/deploy/charts/opni-monitoring-agent/values.yaml
@@ -3,7 +3,7 @@ nameOverride: ""
 fullnameOverride: ""
 
 image:
-  repository: kralicky/opni-monitoring
+  repository: rancher/opni
   # Overrides the image tag whose default is the chart appVersion.
   tag: latest
   pullPolicy: Always
