--- a/deploy/charts/opni-monitoring-agent/templates/rbac.yaml
+++ b/deploy/charts/opni-monitoring-agent/templates/rbac.yaml
@@ -66,6 +66,18 @@ rules:
     - update
     - patch
     - delete
+- apiGroups:
+    - opni.io
+  resources:
+    - keyrings
+  verbs:
+    - get
+    - list
+    - watch
+    - create
+    - update
+    - patch
+    - delete
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
