Update deployment files

--- a/deploy/manifests/10_operator.yaml
+++ b/deploy/manifests/10_operator.yaml
@@ -65,11 +65,12 @@ spec:
       serviceAccountName: opni-manager
       containers:
         - args:
+            - manager
             - --health-probe-bind-address=:8081
             - --metrics-bind-address=127.0.0.1:8080
             - --leader-elect
           command:
-            - /manager
+            - opni
           env:
             - name: POD_NAME
               valueFrom:
