--- a/packages/opni-agent/templates/crd-template/Chart.yaml
+++ b/packages/opni-agent/templates/crd-template/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 version: 0.4.1
 description: Installs the CRDs for Opni.
-name: opni-crd
+name: opni-agent-crd
 type: application
 maintainers:
 - email: joe.kralicky@suse.com
@@ -10,5 +10,5 @@ maintainers:
   name: Dan Bason
 annotations:
   catalog.cattle.io/hidden: "true"
-  catalog.cattle.io/release-name: opni-crd
+  catalog.cattle.io/release-name: opni-agent-crd
   catalog.cattle.io/namespace: opni-system
